--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,13 +19,46 @@ target_include_directories(${PROJECT_NAME}
         ${PROJECT_SOURCE_DIR}/include
 )
 
+# 添加 pthread 依赖
 if(WIN32)
 else()
     target_link_libraries(${PROJECT_NAME} PRIVATE -pthread)
 endif()
 
-include(cmake/CPM.cmake)
+# 导入CPM脚本
+set(CPM_DOWNLOAD_LOCATION "${CMAKE_BINARY_DIR}/cmake/CPM.cmake")
+if(NOT EXISTS ${CPM_DOWNLOAD_LOCATION})
+   message(STATUS "Downloading CPM.cmake")
+   file(DOWNLOAD
+   https://cdn.jsdelivr.net/gh/cpm-cmake/CPM.cmake/cmake/CPM.cmake
+${CPM_DOWNLOAD_LOCATION})
+endif(NOT EXISTS ${CPM_DOWNLOAD_LOCATION})
+include(${CPM_DOWNLOAD_LOCATION})
 
+# 导入 jsoncpp 依赖
+CPMAddPackage(
+    NAME jsoncpp	 
+    GIT_TAG master
+    GIT_REPOSITORY https://github.com/open-source-parsers/jsoncpp
+    DOWNLOAD_ONLY YES
+)
+add_library(jsoncpp_static 
+    STATIC 
+        ${jsoncpp_SOURCE_DIR}/src/lib_json/json_reader.cpp
+        ${jsoncpp_SOURCE_DIR}/src/lib_json/json_value.cpp
+        ${jsoncpp_SOURCE_DIR}/src/lib_json/json_writer.cpp
+)
+target_include_directories(jsoncpp_static
+    PUBLIC 
+        ${jsoncpp_SOURCE_DIR}/include
+)
+target_include_directories(jsoncpp_static
+    PRIVATE 
+        ${jsoncpp_SOURCE_DIR}/src/lib_json
+)
+target_link_libraries(${PROJECT_NAME} PRIVATE jsoncpp_static)
+
+# 导入 httplib 依赖
 CPMAddPackage(
     NAME httplib	 
     GIT_TAG master
@@ -33,16 +66,12 @@ CPMAddPackage(
     DOWNLOAD_ONLY YES
 )
 target_include_directories(${PROJECT_NAME} PRIVATE ${httplib_SOURCE_DIR})
-
-# 链接win socket
 if(WIN32)
   target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32)
 endif()
 
-# 导入jsoncpp依赖
-include(cmake/jsoncpp.cmake)
-target_link_libraries(${PROJECT_NAME} PRIVATE jsoncpp_static)
-
+# 添加测试
 add_executable(test 
     test/test.cpp)
 target_link_libraries(test PRIVATE split_words)
+
